[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/Candy/Pause.gd" type="Script" id=1]
[ext_resource path="res://assets/Candy/gui/f.png" type="Texture" id=2]
[ext_resource path="res://assets/Candy/gui/placeholder(1).png" type="Texture" id=3]
[ext_resource path="res://assets/Candy/gui/cancel.png" type="Texture" id=4]
[ext_resource path="res://assets/Candy/gui/replay.png" type="Texture" id=5]
[ext_resource path="res://assets/Fontes/fonteCandyorange.fnt" type="BitmapFont" id=6]

[sub_resource type="Animation" id=1]

resource/name = "hide"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Replay:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 181.523, 614.523 ), Vector2( 179.344, 1582.19 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Replay:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 121.963, 814.693 ), Vector2( 121.963, 1774.44 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:transform/rot")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 90.0, 90.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Return:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 493.148, 748.615 ), Vector2( 488.604, 1712.91 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Return:transform/rot")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 90.0, 90.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Home:transform/pos")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 336.188, 585.987 ), Vector2( 333.118, 1538.36 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("RichTextLabel:rect/pos")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 173, 423 ), Vector2( 162, 1383 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "show"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Replay:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 183.89, -283.373 ), Vector2( 181.943, 628.554 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Replay:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 121.963, -77.7542 ), Vector2( 121.963, 814.693 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:transform/rot")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 90.0, 90.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Return:transform/pos")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 483.442, -154.774 ), Vector2( 479.351, 758.711 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Return:transform/rot")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 90.0, 90.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Home:transform/pos")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 333.816, -335.671 ), Vector2( 335.436, 563.213 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("RichTextLabel:rect/pos")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 163, -496 ), Vector2( 167, 400 ) ]
}

[node name="Pause" type="Node2D"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="ColorFrame" type="ColorFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -4.0
margin/right = 800.0
margin/bottom = 1276.0
color = Color( 1, 1, 1, 0.470588 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 121.963, 814.693 )
transform/rot = 90.0
transform/scale = Vector2( 0.306729, 0.492023 )
texture = ExtResource( 2 )
centered = false

[node name="Home" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 335.436, 563.213 )
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Return" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 479.351, 758.711 )
transform/rot = 90.0
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Replay" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 181.943, 628.554 )
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hide = SubResource( 1 )
anims/show = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "show"

[node name="RichTextLabel" type="RichTextLabel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 167.0
margin/top = 400.0
margin/right = 651.0
margin/bottom = 589.0
custom_fonts/normal_font = ExtResource( 6 )
bbcode/enabled = true
bbcode/bbcode = "[center]Jogo[/center] 
[center]pausado[/center] "
visible_characters = -1
percent_visible = 1.0

[connection signal="pressed" from="Home" to="." method="_on_Home_pressed"]

[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]

[connection signal="pressed" from="Replay" to="." method="_on_Replay_pressed"]


